# di-companion

./: .dockerignore  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index.html  manifest.json  package-lock.json  package.json  prompt.md  vite.config.ts
frontend/: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierrc.json  Dockerfile  README.md  add_progress_fields.sql  index.html  manifest.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/analytics/: AmplitudeProvider.tsx
frontend/src/components/: AssessmentStep.tsx  AssessmentSummary.tsx  CookieBanner.tsx  DocumentManager.tsx  MenuItem.tsx  PWAUpdater.tsx  PerformanceScore.tsx  SearchResults.tsx  SurveyField.tsx  styled.ts
frontend/src/config/: index.ts
frontend/src/hooks/: useAssessmentExport.ts  useAuth.tsx  useCurrentPattern.tsx  useDebounce.ts  useDocumentUpload.ts  useFeatureFlags.ts  useFileUpload.ts  useMethod.tsx  usePattern.tsx  usePatterns.tsx  useQuestions.tsx  useRecommendations.tsx  useRecommendedPatterns.tsx  useRequests.tsx  useSearch.tsx  useSearchPatterns.tsx  useStartupMethod.tsx  useStartupMethods.tsx  useStartupPattern.tsx  useStartupPatterns.tsx  useStartupQuestion.tsx  useStartupQuestions.tsx  useStartups.tsx  useSurvey.tsx  useSurveys.tsx  useUserMethod.tsx  useUserMethods.tsx  useUserQuestion.tsx  useUserQuestions.tsx
frontend/src/lib/: axios.ts  supabase.ts
frontend/src/routes/: index.ts  (+2 more)
(+283 files in other folders)
