[tool.poetry]
name = "di-companion"
version = "0.1.0"
description = ""
authors = ["Simon Liedtke <simon.liedtke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
aiohttp = "^3.11.10"
openai = "^1.57.3"
openpyxl = "^3.1.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
